- Added the backend for scheduling inspections and record management like score, hygiene grade, status change
- Added some sql to test the hawker centre filter for the migration and seed_update folder

- Ensure swagger testing is working, might need to organise it later on

- Added the deactivation for patron account, vendor haven't yet

- Integrated patron deactivation to the front-end
